# repo-red-group

./: .gitignore  README.md
sparsedynamics_pytorch/: Averaged_Reduced_Order_Model_Proposal.md  README.md  SINDy_Mathematical_Description.md  pyproject.toml  spring_lattice_demo.pt
sparsedynamics_pytorch/data/spring_lattice/: spring_lattice_3x3_constant.pt  spring_lattice_3x3_none.pt  spring_lattice_3x3_sinusoidal.pt
sparsedynamics_pytorch/examples/: check_spring_lattice_no_forcing.py  compare_methods_linear2d.py  compare_methods_lorenz.py  ex01a_linear2d.py  ex02_lorenz.py  ex03_lorenz_trainable.py  ex04_neural_ode_linear2d.py  ex05_spring_lattice_forward.py  example_plotting.py  generate_spring_grid_frequency_response_report.py  generate_spring_grid_physical_forced_adam_dense_report.py  generate_spring_grid_physical_forced_report.py  generate_spring_grid_rom_vs_full_report.py  generate_spring_grid_three_model_reports.py  generate_spring_lattice_data.py  quickstart_lorenz.py  spring_grid_K_regression.py
sparsedynamics_pytorch/sindy_torch/: __init__.py  trajectory.py  utils.py
sparsedynamics_pytorch/sindy_torch/analysis/: __init__.py  frequency_response.py
sparsedynamics_pytorch/sindy_torch/differentiation/: __init__.py  autograd.py  finite_difference.py  tv_reg_diff.py
sparsedynamics_pytorch/sindy_torch/solvers/: stls.py  (+4 more)
sparsedynamics_pytorch/tests/: verify_against_matlab.py  verify_cuda_optional.py  verify_neural_ode.py  verify_spring_grid_block_rom.py  verify_spring_grid_cuda_optional.py  verify_spring_grid_trajectory_v2.py  verify_trajectory_gradients.py
(+71 files in other folders)
