[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sindy-torch"
version = "0.1.0"
description = "PyTorch implementation of Sparse Identification of Nonlinear Dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "torch",
    "torchdiffeq",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sindy_torch*"]
